--- a/menu.html
+++ b/menu.html
@@ -10,13 +10,13 @@
     <div class="menu-container">
         <h1>Main Menu</h1> <!-- Main title -->
         <br>
-        <button class="menu-button" onclick="navigateTo('file:///C:/Users/DELL/OneDrive/Desktop/Finals%20Practical%20HTML/HTML/Resume%20with%20Bootstrap/resumebootstrap.html')">RESUME</button>
+        <button class="menu-button" onclick="navigateTo('https://gojosatoru50.github.io/ITEC-87-COMPILATION/Resume with Bootstrap/resumebootstrap.html)">RESUME</button>
         <br><br><br>
-        <button class="menu-button" onclick="navigateTo('file:///C:/Users/DELL/OneDrive/Desktop/Finals%20Practical%20HTML/HTML/Cor/cor.html')">REGISTRATION</button>
+        <button class="menu-button" onclick="navigateTo('https://gojosatoru50.github.io/ITEC-87-COMPILATION/cor.html')">REGISTRATION</button>
         <br><br><br>
-        <button class="menu-button" onclick="navigateTo('file:///C:/Users/DELL/OneDrive/Desktop/HTML/Restaurant%20Menu_HTML/Menu.html')">RESTAURANT</button>
+        <button class="menu-button" onclick="navigateTo('https://gojosatoru50.github.io/ITEC-87-COMPILATION/Restaurant Menu/Menu.html')">RESTAURANT</button>
         <br><br><br>
-        <button class="menu-button" onclick="navigateTo('file:///C:/Users/DELL/OneDrive/Desktop/HTML/Clothing%20Store%20_%20HTML/Clothes.html')">SARI-SARI STORE</button>
+        <button class="menu-button" onclick="navigateTo('https://gojosatoru50.github.io/ITEC-87-COMPILATION/Clothing Store/Clothes.html')">SARI-SARI STORE</button>
         <br><br><br>
 		<button class="menu-button" onclick="navigateTo('index.html')">EXIT</button>
         <br><br><br><br>
