--- a/menu.html
+++ b/menu.html
@@ -10,9 +10,9 @@
     <div class="menu-container">
         <h1>Main Menu</h1> <!-- Main title -->
         <br>
-        <button class="menu-button" onclick="navigateTo('https://gojosatoru50.github.io/ITEC-87-COMPILATION/Resume with Bootstrap/resumebootstrap.html)">RESUME</button>
+        <button class="menu-button" onclick="navigateTo('https://gojosatoru50.github.io/ITEC-87-COMPILATION/Resume with Bootstrap/resumebootstrap.html')">RESUME</button>
         <br><br><br>
-        <button class="menu-button" onclick="navigateTo('https://gojosatoru50.github.io/ITEC-87-COMPILATION/cor.html')">REGISTRATION</button>
+        <button class="menu-button" onclick="navigateTo('https://gojosatoru50.github.io/ITEC-87-COMPILATION/Cor/cor.html')">REGISTRATION</button>
         <br><br><br>
         <button class="menu-button" onclick="navigateTo('https://gojosatoru50.github.io/ITEC-87-COMPILATION/Restaurant Menu/Menu.html')">RESTAURANT</button>
         <br><br><br>
